services/announcementservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: announcementservice
spec:
  selector:
    app: announcementservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
