services/assistancerequestservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assistancerequestservice
spec:
  selector:
    app: assistancerequestservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
