services/disasterservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: disasterservice
spec:
  selector:
    app: disasterservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
