services/submithelpservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: submithelpservice
spec:
  selector:
    app: submithelpservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8086
