services/testservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  selector:
    app: testservice 
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8081
