services/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 80
          - path: /test(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: testservice
                port:
                  number: 80
          - path: /disaster(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: disasterservice
                port:
                  number: 80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authservice
                port:
                  number: 80
          - path: /test(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: testservice
                port:
                  number: 80
          - path: /disaster(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: disasterservice
                port:
                  number: 80
          - path: /announcement(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: announcementservice
                port:
                  number: 80
          - path: /assistancerequest(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: assistancerequestservice
                port:
                  number: 80
          - path: /submithelp(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: submithelpservice
                port:
                  number: 80
