services/testservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testservice-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: testservice
            port:
              number: 80
